PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_9-17_Return_fonction_int/gcc-compile.txt
input.c: In function ‘main’:
input.c:6:5: error: expected declaration or statement at end of input
    6 |     return 4;
      |     ^~~~~~

return code: 1
